fix: Fixes search button layout on mobile

--- a/packages/core/src/components/common/Navbar/navbar.module.scss
+++ b/packages/core/src/components/common/Navbar/navbar.module.scss
@@ -186,6 +186,7 @@
 
   [data-fs-navbar-header] {
     padding: var(--fs-navbar-header-padding);
+    overflow-x: clip;
     background-color: var(--fs-navbar-bkg-color);
     backdrop-filter: blur(10px);
   }
